--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start":"node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/server.js",
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec 'npm test'"
   },
-  "engines" : {
-    "node" : "11.0.0"
+  "engines": {
+    "node": "11.0.0"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,23 @@
   },
   "homepage": "https://github.com/Muskan777/Collaborative-Writing-Tool#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "browserify": "^16.5.1",
+    "ejs": "^3.1.3",
+    "expect": "^26.1.0",
     "express": "^4.17.1",
-    "socket.io": "^2.3.0"
+    "express-fileupload": "^1.1.7-alpha.3",
+    "http-server": "^0.12.3",
+    "ipfs": "^0.47.0",
+    "ipfs-http-client": "^44.3.0",
+    "mocha": "^8.0.1",
+    "moment": "^2.27.0",
+    "mustache": "^4.0.1",
+    "socket.io": "^2.3.0",
+    "y-array": "^10.1.4",
+    "y-ipfs-connector": "^2.3.0",
+    "y-memory": "^8.0.9",
+    "y-text": "^9.5.1",
+    "yjs": "^13.2.0"
   }
 }
