--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
     "browserify": "^16.5.1",
     "ejs": "^3.1.3",
     "express": "^4.15.2",
+    "express-session": "^1.17.1",
+    "formidable": "^1.2.2",
     "http-server": "^0.12.3",
     "moment": "^2.27.0",
+    "mongoose": "^5.9.21",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
   }
