--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "browserify": "^16.5.1",
     "ejs": "^3.1.3",
     "express": "^4.15.2",
+    "express-fileupload": "^1.1.7-alpha.3",
     "express-session": "^1.17.1",
     "formidable": "^1.2.2",
+    "fs": "0.0.1-security",
     "http-server": "^0.12.3",
     "moment": "^2.27.0",
     "mongoose": "^5.9.21",
