--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-	  "start": "node app.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +23,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
+    "path": "^0.12.7",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
   }
